--- a/capitoli/cap5.tex
+++ b/capitoli/cap5.tex
@@ -1,45 +1,394 @@
 \chapter{Analisi delle Prestazioni e Affidabilità dei Protocolli}
 
+\section{Introduzione}
+
+Nel mondo della domotica residenziale, la scelta del protocollo di comunicazione rappresenta una decisione fondamentale che influenza profondamente le prestazioni, l'affidabilità e l'esperienza utente dell'intero sistema. Questo capitolo si propone di analizzare in dettaglio le performance dei principali protocolli IoT utilizzati in ambito domestico, fornendo strumenti concreti per valutare quale soluzione si adatti meglio a specifiche esigenze implementative.
+
+L'evoluzione tecnologica ha portato alla nascita di numerosi protocolli, ciascuno con peculiarità che lo rendono più o meno adatto a determinati scenari d'uso. Non esiste una soluzione universalmente superiore: la scelta ottimale dipende da un'attenta valutazione di molteplici fattori che analizzeremo nel dettaglio.
+
 \section{Indicatori chiave di performance}
-Gli indicatori chiave per valutare le prestazioni dei protocolli IoT sono molteplici e fondamentali per determinare l’idoneità di un protocollo in specifici contesti applicativi. Tra i principali si annoverano la latenza, il consumo energetico, la larghezza di banda, l’affidabilità della trasmissione e la capacità di gestione della rete.
 
-La latenza rappresenta il tempo necessario affinché un pacchetto dati venga trasmesso da un nodo sorgente a un nodo destinazione. In applicazioni critiche come il controllo industriale o la domotica in tempo reale, una bassa latenza è essenziale per garantire risposte tempestive. Ad esempio, Zigbee tipicamente offre latenze nell’ordine di qualche decina di millisecondi, mentre Wi-Fi può garantire latenze inferiori ma a costo di consumi energetici più elevati \cite{ZigbeeLatencyStudy}.
+Per valutare in modo oggettivo e completo le prestazioni dei protocolli IoT, è necessario definire e comprendere gli indicatori chiave di performance (KPI) che ne determinano l'efficacia in contesti reali.
 
-Il consumo energetico è un indicatore cruciale, soprattutto per dispositivi alimentati a batteria. Protocollo come Z-Wave e Thread sono progettati per ottimizzare l’efficienza energetica, permettendo una durata della batteria di mesi o anni in condizioni normali di utilizzo \cite{EnergyEfficientProtocols}.
+\subsection{Latenza: il tempo di risposta del sistema}
 
-La larghezza di banda determina la quantità di dati che possono essere trasmessi in un dato intervallo di tempo. Wi-Fi, ad esempio, offre larghezze di banda significativamente superiori rispetto a Zigbee o Z-Wave, rendendolo adatto a scenari che richiedono il trasferimento di grandi quantità di dati, come il video streaming \cite{WiFiBandwidth}.
+La latenza rappresenta il tempo che intercorre tra l'invio di un comando e la sua effettiva esecuzione. In un sistema domotico, questo parametro influenza direttamente la percezione di reattività del sistema da parte dell'utente.
 
-Infine, l’affidabilità della trasmissione e la capacità di gestione della rete, che includono la tolleranza ai guasti e la scalabilità, sono indicatori fondamentali per garantire il corretto funzionamento della rete IoT in ambienti dinamici e complessi.
+Immaginiamo di premere un interruttore smart per accendere una luce: se il ritardo supera i 200-300 millisecondi, l'utente percepisce il sistema come lento o non responsivo. Questa soglia psicologica rende la latenza un parametro critico per l'accettazione del sistema.
+
+Zigbee, nella sua implementazione tipica, garantisce latenze nell'ordine di 15-30 millisecondi per comunicazioni dirette, che possono salire a 50-100 millisecondi in reti mesh complesse con routing multi-hop. Wi-Fi, quando ottimizzato per applicazioni real-time, può scendere sotto i 10 millisecondi, ma questo vantaggio si paga in termini di consumo energetico \cite{ZigbeeLatencyStudy}.
+
+\subsection{Consumo energetico: la sfida dell'autonomia}
+
+Il consumo energetico rappresenta forse la sfida più significativa nell'IoT domestico. Dispositivi come sensori di movimento, temperatura o apertura porte devono operare per anni con una singola batteria, rendendo l'efficienza energetica un requisito imprescindibile.
+
+I protocolli si differenziano notevolmente sotto questo aspetto:
+
+\begin{itemize}
+    \item \textbf{Z-Wave}: Ottimizzato per il risparmio energetico, con consumi in standby inferiori a 1 µA e trasmissione che richiede circa 30-40 mA per brevi periodi
+    \item \textbf{Zigbee}: Modalità sleep avanzate con consumi sotto i 3 µA, risveglio rapido in meno di 15 ms
+    \item \textbf{Thread}: Eredita l'efficienza di Zigbee aggiungendo ottimizzazioni per il routing IPv6
+    \item \textbf{Wi-Fi}: Anche con le ottimizzazioni più recenti (Wi-Fi 6), il consumo rimane nell'ordine dei mA in standby
+\end{itemize}
+
+Un sensore di temperatura Z-Wave che trasmette ogni 5 minuti può operare per 5-7 anni con una batteria CR2032, mentre un dispositivo Wi-Fi equivalente richiederebbe ricariche mensili o alimentazione continua \cite{EnergyEfficientProtocols}.
+
+\subsection{Larghezza di banda: capacità di trasferimento dati}
+
+La larghezza di banda determina la quantità di informazioni che possono fluire attraverso la rete in un dato periodo. Questo parametro diventa critico quando si considerano applicazioni come:
+
+\begin{itemize}
+    \item Streaming video da telecamere di sicurezza
+    \item Aggiornamenti firmware over-the-air
+    \item Trasferimento di log dettagliati per diagnostica
+    \item Controllo di dispositivi audio multi-room
+\end{itemize}
+
+Le differenze tra i protocolli sono sostanziali:
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|c|c|}
+\hline
+\textbf{Protocollo} & \textbf{Velocità massima} & \textbf{Throughput reale} \\
+\hline
+Z-Wave & 100 kbps & 40-60 kbps \\
+Zigbee & 250 kbps & 100-150 kbps \\
+Thread & 250 kbps & 100-150 kbps \\
+Wi-Fi 4 & 600 Mbps & 100-200 Mbps \\
+Wi-Fi 6 & 9.6 Gbps & 1-2 Gbps \\
+\hline
+\end{tabular}
+\caption{Confronto delle velocità di trasmissione dei principali protocolli IoT}
+\end{table}
+
+È evidente come Wi-Fi domini in termini di capacità pura, ma questa superiorità va contestualizzata: la maggior parte dei dispositivi domotici trasmette pochi byte di dati (stato on/off, temperatura, luminosità), rendendo l'alta banda di Wi-Fi spesso superflua e costosa in termini energetici \cite{WiFiBandwidth}.
+
+\subsection{Affidabilità e resilienza}
+
+L'affidabilità di un protocollo si misura nella sua capacità di garantire la consegna dei messaggi anche in condizioni avverse. Questo include:
+
+\begin{itemize}
+    \item \textbf{Tolleranza alle interferenze}: Capacità di operare in presenza di altri dispositivi wireless
+    \item \textbf{Meccanismi di ritrasmissione}: Gestione automatica dei pacchetti persi
+    \item \textbf{Routing dinamico}: Capacità di trovare percorsi alternativi in caso di guasti
+    \item \textbf{Quality of Service (QoS)}: Prioritizzazione del traffico critico
+\end{itemize}
+
+Le reti mesh di Zigbee e Thread eccellono in questo ambito, con algoritmi di routing che si adattano dinamicamente a cambiamenti nella topologia della rete. Z-Wave, operando su frequenze sub-GHz meno congestionate, offre maggiore immunità alle interferenze rispetto ai protocolli a 2.4 GHz.
 
 \section{Confronto prestazionale tra Zigbee, Z-Wave, Wi-Fi, Thread e Matter}
-Il confronto tra i protocolli Zigbee, Z-Wave, Wi-Fi, Thread e Matter si basa su diverse metriche chiave. Zigbee e Z-Wave operano su bande di frequenza sub-GHz o 2.4 GHz, offrendo un buon compromesso tra portata e consumo energetico. Zigbee supporta velocità fino a 250 kbps, mentre Z-Wave arriva a circa 100 kbps, con una portata tipica di 30-100 metri \cite{ZWaveVsZigbee}.
 
-Wi-Fi, invece, opera su bande a 2.4 GHz e 5 GHz con velocità che possono superare i 100 Mbps, ma con un consumo energetico significativamente più elevato, rendendolo meno adatto per dispositivi a bassa potenza \cite{WiFiVsIoT}.
+\subsection{Zigbee: il veterano delle reti mesh}
 
-Thread è un protocollo IP-based progettato per reti mesh a bassa potenza, con supporto per IPv6 e sicurezza integrata. Offre una latenza inferiore rispetto a Zigbee e una migliore interoperabilità grazie all’uso di standard aperti \cite{ThreadProtocol}.
+Zigbee rappresenta uno dei protocolli più maturi nell'ecosistema IoT domestico. Basato sullo standard IEEE 802.15.4, opera principalmente sulla banda 2.4 GHz condivisa con Wi-Fi e Bluetooth.
 
-Matter, recentemente sviluppato, mira a unificare i protocolli esistenti per garantire interoperabilità tra dispositivi di diversi produttori. Utilizza Thread e Wi-Fi come tecnologie di trasporto e si distingue per un elevato livello di sicurezza e facilità di configurazione \cite{MatterWhitePaper}.
+\textbf{Punti di forza:}
+\begin{itemize}
+    \item Ecosistema maturo con ampia disponibilità di dispositivi
+    \item Supporto per reti mesh self-healing fino a 65.000 nodi teorici
+    \item Profili applicativi standardizzati (Zigbee Home Automation, Zigbee Light Link)
+    \item Consumi energetici estremamente ridotti
+\end{itemize}
 
-Un esempio pratico di confronto è la gestione di una rete domestica complessa: mentre Zigbee e Z-Wave sono adatti per sensori e attuatori a bassa potenza, Wi-Fi è preferibile per dispositivi ad alta richiesta di banda come videocamere IP, e Thread/Matter offrono un equilibrio tra efficienza energetica e interoperabilità.
+\textbf{Limitazioni:}
+\begin{itemize}
+    \item Interferenze sulla banda 2.4 GHz affollata
+    \item Complessità nella gestione di reti molto grandi
+    \item Frammentazione tra diversi profili e versioni
+    \item Velocità di trasmissione limitata per applicazioni data-intensive
+\end{itemize}
+
+Un caso d'uso tipico è l'illuminazione smart: Philips Hue utilizza Zigbee per controllare fino a 50 lampadine con un singolo bridge, garantendo tempi di risposta quasi istantanei e sincronizzazione perfetta per scenari luminosi complessi \cite{ZWaveVsZigbee}.
+
+\subsection{Z-Wave: l'alternativa su frequenze dedicate}
+
+Z-Wave si distingue per l'utilizzo di frequenze sub-GHz (868 MHz in Europa, 908 MHz negli USA), che offrono vantaggi significativi in termini di penetrazione attraverso muri e interferenze ridotte.
+
+\textbf{Caratteristiche distintive:}
+\begin{itemize}
+    \item Interoperabilità garantita tra dispositivi certificati Z-Wave
+    \item Portata superiore (fino a 100 metri in campo aperto)
+    \item Rete mesh con routing source-routed per efficienza ottimale
+    \item Limite di 232 nodi per rete, ma sufficiente per la maggior parte delle abitazioni
+\end{itemize}
+
+\textbf{Considerazioni pratiche:}
+La velocità limitata (100 kbps) rende Z-Wave inadatto per applicazioni che richiedono trasferimento di grandi quantità di dati, ma eccellente per controllo e monitoraggio. Un sistema di sicurezza domestico basato su Z-Wave può gestire decine di sensori porta/finestra, rilevatori di movimento e sirene con affidabilità militare \cite{ZWaveVsZigbee}.
+
+\subsection{Wi-Fi: potenza e versatilità}
+
+Wi-Fi domina in termini di capacità pura e ubiquità. Ogni casa moderna ha già una rete Wi-Fi, eliminando la necessità di hub dedicati per molte applicazioni.
+
+\textbf{Vantaggi competitivi:}
+\begin{itemize}
+    \item Larghezza di banda incomparabile per streaming video e trasferimenti massivi
+    \item Infrastruttura già presente nella maggior parte delle abitazioni
+    \item Supporto nativo per IP, facilitando l'integrazione con servizi cloud
+    \item Wi-Fi 6 introduce ottimizzazioni specifiche per IoT (Target Wake Time)
+\end{itemize}
+
+\textbf{Sfide nell'IoT domestico:}
+\begin{itemize}
+    \item Consumo energetico proibitivo per dispositivi a batteria
+    \item Complessità nella gestione di decine di dispositivi su un singolo access point
+    \item Latenza variabile in reti congestionate
+    \item Costi superiori per l'hardware
+\end{itemize}
+
+Le videocamere di sicurezza rappresentano l'applicazione ideale per Wi-Fi: richiedono alta banda per lo streaming video e sono tipicamente alimentate dalla rete elettrica, eliminando i vincoli energetici \cite{WiFiVsIoT}.
+
+\subsection{Thread: l'evoluzione IP-native}
+
+Thread rappresenta l'evoluzione moderna dei protocolli mesh, progettato nativamente per l'era dell'IPv6 e dell'interoperabilità.
+
+\textbf{Innovazioni chiave:}
+\begin{itemize}
+    \item Supporto nativo IPv6 per connettività end-to-end con Internet
+    \item Sicurezza banking-grade con crittografia AES e gestione automatica delle chiavi
+    \item Commissioning semplificato tramite smartphone
+    \item Self-healing mesh con convergenza rapida in caso di guasti
+\end{itemize}
+
+\textbf{Prestazioni sul campo:}
+Thread dimostra latenze paragonabili a Zigbee (20-50 ms) con il vantaggio di un'architettura più moderna. La capacità di supportare fino a 250 dispositivi attivi in una rete domestica lo rende adatto anche per installazioni complesse. Apple HomePod mini e Google Nest Hub fungono da border router Thread, facilitando l'adozione senza hardware aggiuntivo \cite{ThreadProtocol}.
+
+\subsection{Matter: l'unificatore dell'ecosistema}
+
+Matter non è un protocollo di trasporto ma uno standard applicativo che opera sopra Thread, Wi-Fi ed Ethernet, promettendo di risolvere il problema dell'interoperabilità.
+
+\textbf{Proposizione di valore:}
+\begin{itemize}
+    \item Interoperabilità garantita tra ecosistemi (Apple HomeKit, Google Home, Amazon Alexa)
+    \item Sicurezza by-design con certificazione obbligatoria
+    \item Commissioning unificato tramite QR code
+    \item Controllo locale senza dipendenza dal cloud
+\end{itemize}
+
+\textbf{Impatto sulle prestazioni:}
+Matter aggiunge un overhead minimo (5-10\% di latenza aggiuntiva) ma i benefici in termini di compatibilità superano ampiamente questo costo. Un termostato Matter può essere controllato indifferentemente da Siri, Google Assistant o Alexa, con prestazioni consistenti su tutte le piattaforme \cite{MatterWhitePaper}.
 
 \section{Scalabilità dei protocolli in ambienti domestici complessi}
-La scalabilità è un aspetto critico nella progettazione di reti IoT, soprattutto in ambienti domestici complessi con numerosi dispositivi interconnessi. Zigbee e Thread supportano reti mesh che permettono di estendere la copertura e migliorare la robustezza della rete attraverso il routing dinamico.
 
-Zigbee può gestire fino a 65.000 dispositivi in una singola rete, ma in pratica la gestione di un numero elevato di nodi può introdurre problemi di congestione e ritardi nella comunicazione \cite{ZigbeeScalability}. Thread, grazie all’architettura IP-based e al supporto per il routing efficiente, offre una migliore scalabilità e gestione del traffico.
+La scalabilità diventa critica quando si passa da pochi dispositivi smart a vere e proprie case intelligenti con centinaia di sensori, attuatori e controllori.
 
-Z-Wave, pur supportando un numero inferiore di dispositivi (fino a 232 nodi per rete), è noto per la sua affidabilità in ambienti domestici, grazie a un protocollo di routing semplice e robusto \cite{ZWaveScalability}.
+\subsection{Analisi della scalabilità per protocollo}
 
-Wi-Fi, pur offrendo alta capacità di banda, può incontrare difficoltà nella gestione di un elevato numero di dispositivi IoT a causa del consumo energetico e della congestione della rete, soprattutto nelle bande a 2.4 GHz molto utilizzate.
+\subsubsection{Zigbee: teoria vs pratica}
 
-L’adozione di protocolli come Matter, che sfruttano Thread e Wi-Fi, consente di combinare la scalabilità di reti mesh a bassa potenza con la capacità di banda di Wi-Fi, facilitando la gestione di ambienti domestici complessi e favorendo l’interoperabilità tra dispositivi di diversi produttori.
+Mentre Zigbee supporta teoricamente 65.000 dispositivi per rete, la realtà è più complessa. In pratica, reti con più di 200-300 dispositivi iniziano a mostrare:
+
+\begin{itemize}
+    \item Aumento della latenza per il routing complesso
+    \item Congestione del canale radio
+    \item Difficoltà nella gestione e manutenzione
+    \item Problemi di sincronizzazione per aggiornamenti firmware
+\end{itemize}
+
+La soluzione tipica prevede la segmentazione in sotto-reti logiche, ad esempio separando illuminazione, sicurezza e climatizzazione su coordinator Zigbee distinti \cite{ZigbeeScalability}.
+
+\subsubsection{Z-Wave: affidabilità su scala ridotta}
+
+Il limite di 232 nodi di Z-Wave può sembrare restrittivo, ma si rivela adeguato per il 99\% delle installazioni residenziali. La semplicità del protocollo garantisce prestazioni prevedibili anche al limite della capacità.
+
+Un'abitazione di 300 m² può tipicamente includere:
+\begin{itemize}
+    \item 30-40 interruttori e dimmer
+    \item 20-30 sensori ambientali
+    \item 10-15 dispositivi di sicurezza
+    \item 10-20 prese smart e attuatori vari
+\end{itemize}
+
+Totale: 70-105 dispositivi, ben entro i limiti di Z-Wave con margine per espansioni future \cite{ZWaveScalability}.
+
+\subsubsection{Thread e Matter: scalabilità moderna}
+
+Thread affronta la scalabilità con un approccio moderno:
+
+\begin{itemize}
+    \item Router distribuiti che bilanciano automaticamente il carico
+    \item Algoritmi di routing ottimizzati per IPv6
+    \item Gestione efficiente della memoria sui dispositivi edge
+    \item Supporto per commissioning di massa
+\end{itemize}
+
+Test sul campo mostrano che reti Thread con 200+ dispositivi mantengono latenze sotto i 100 ms nel 95° percentile, con degradazione graceful all'aumentare del carico.
+
+\subsection{Strategie per gestire la complessità}
+
+\subsubsection{Architettura gerarchica}
+
+Organizzare la rete in livelli logici migliora gestibilità e prestazioni:
+
+\begin{enumerate}
+    \item \textbf{Livello Edge}: Sensori e attuatori semplici (Zigbee/Z-Wave/Thread)
+    \item \textbf{Livello Aggregazione}: Hub di zona che consolidano il traffico
+    \item \textbf{Livello Core}: Controller principale e servizi cloud (Wi-Fi/Ethernet)
+\end{enumerate}
+
+\subsubsection{Segregazione per funzione}
+
+Separare dispositivi critici da quelli non essenziali:
+
+\begin{itemize}
+    \item \textbf{Rete Sicurezza}: Dedicata a sensori e allarmi (Z-Wave per affidabilità)
+    \item \textbf{Rete Comfort}: Illuminazione e clima (Zigbee/Thread per efficienza)
+    \item \textbf{Rete Media}: Streaming e entertainment (Wi-Fi per banda)
+\end{itemize}
 
 \section{Strumenti e metodologie di test per le performance IoT}
-Per valutare in modo efficace le prestazioni e l’affidabilità dei protocolli IoT, sono disponibili numerosi strumenti software e hardware, oltre a metodologie di test specifiche.
 
-Tra gli strumenti software, Wireshark è ampiamente utilizzato per l’analisi del traffico di rete, permettendo di monitorare pacchetti, latenza e perdite di dati \cite{WiresharkTool}. Per testare il consumo energetico, strumenti come Power Profiler Kit di Nordic Semiconductor consentono di misurare con precisione l’assorbimento di corrente dei dispositivi \cite{PowerProfiler}.
+Valutare oggettivamente le prestazioni di una rete IoT richiede strumenti specializzati e metodologie rigorose.
 
-Le metodologie di test includono test di stress, che simulano un carico elevato di traffico per valutare la robustezza della rete; test di latenza e throughput, che misurano i tempi di risposta e la capacità di trasmissione dati; e test di interoperabilità, fondamentali per protocolli come Matter che puntano a garantire la compatibilità tra dispositivi di diversi produttori \cite{IoTTestingMethods}.
+\subsection{Strumenti software per l'analisi}
 
-Inoltre, simulazioni tramite software come NS-3 permettono di modellare reti IoT complesse e prevedere il comportamento dei protocolli in scenari realistici, riducendo i costi e i tempi di sviluppo \cite{NS3Simulator}.
+\subsubsection{Analisi del traffico di rete}
 
-L’integrazione di questi strumenti e metodologie consente di ottenere una valutazione completa delle prestazioni dei protocolli IoT, guidando la scelta del protocollo più adatto in base alle esigenze specifiche dell’applicazione.
+\textbf{Wireshark} rimane lo standard de facto per l'analisi approfondita del traffico. Con i dissector appropriati, permette di:
+\begin{itemize}
+    \item Decodificare frame Zigbee, Z-Wave (con chiavi di rete)
+    \item Misurare latenze end-to-end con precisione microsecondo
+    \item Identificare retransmissioni e pacchetti persi
+    \item Analizzare pattern di traffico e anomalie
+\end{itemize}
+
+Per Thread e Matter, strumenti specializzati come \textbf{Thread Network Analyzer} offrono visualizzazioni dedicate della topologia mesh e metriche di routing \cite{WiresharkTool}.
+
+\subsubsection{Monitoraggio energetico}
+
+Il \textbf{Power Profiler Kit II} di Nordic Semiconductor rappresenta lo stato dell'arte per la profilazione energetica:
+\begin{itemize}
+    \item Risoluzione di corrente fino a 1 nA
+    \item Frequenza di campionamento 100 kHz
+    \item Integrazione con ambiente di sviluppo per correlazione codice-consumo
+    \item Capacità di emulare batterie con impedenza variabile
+\end{itemize}
+
+Alternativa open-source: \textbf{Otii Arc} combina alimentatore programmabile e oscilloscopio per misurazioni precise a costo contenuto \cite{PowerProfiler}.
+
+\subsection{Strumenti hardware specializzati}
+
+\subsubsection{Sniffer radio multi-protocollo}
+
+Dispositivi come \textbf{Texas Instruments CC2531} o \textbf{Nordic nRF52840 Dongle} permettono di:
+\begin{itemize}
+    \item Catturare traffico radio raw su 2.4 GHz
+    \item Decodificare simultaneamente Zigbee, Thread, Bluetooth
+    \item Iniettare pacchetti per test di robustezza
+    \item Misurare RSSI e LQI per mappatura copertura
+\end{itemize}
+
+\subsubsection{Emulatori di rete e generatori di carico}
+
+Per test su larga scala, piattaforme come \textbf{Spirent Vertex} permettono di:
+\begin{itemize}
+    \item Emulare centinaia di dispositivi virtuali
+    \item Generare pattern di traffico realistici
+    \item Simulare condizioni di rete avverse (perdita pacchetti, jitter)
+    \item Automatizzare test di conformità e certificazione
+\end{itemize}
+
+\subsection{Metodologie di test strutturate}
+
+\subsubsection{Test di latenza e responsività}
+
+Protocollo di test standard:
+\begin{enumerate}
+    \item \textbf{Setup}: Rete isolata con 10, 50, 100, 200 dispositivi
+    \item \textbf{Stimolo}: Comando broadcast (es. "spegni tutte le luci")
+    \item \textbf{Misurazione}: Tempo dal comando all'ultima conferma
+    \item \textbf{Ripetizioni}: Minimo 1000 iterazioni per significatività statistica
+    \item \textbf{Analisi}: Media, mediana, 95° e 99° percentile
+\end{enumerate}
+
+\subsubsection{Stress test e resilienza}
+
+Scenari di test critici:
+\begin{itemize}
+    \item \textbf{Broadcast storm}: Tutti i dispositivi trasmettono simultaneamente
+    \item \textbf{Node failure}: Rimozione improvvisa del 20\% dei router
+    \item \textbf{Interferenza}: Introduzione di rumore controllato sul canale
+    \item \textbf{Power cycling}: Spegnimento/riaccensione casuale di dispositivi
+\end{itemize}
+
+\subsubsection{Test di interoperabilità}
+
+Per protocolli come Matter, essenziale verificare:
+\begin{itemize}
+    \item Commissioning cross-vendor
+    \item Mantenimento delle funzionalità base tra ecosistemi
+    \item Gestione aggiornamenti firmware misti
+    \item Comportamento in caso di versioni protocollo diverse
+\end{itemize}
+
+\subsection{Simulazione e modellazione}
+
+\subsubsection{Network Simulator 3 (NS-3)}
+
+NS-3 offre moduli dedicati per simulare reti IoT complete:
+\begin{itemize}
+    \item Modelli accurati per Zigbee, 6LoWPAN, Thread
+    \item Simulazione di propagazione radio realistica
+    \item Scalabilità fino a migliaia di nodi
+    \item Integrazione con trace reali per validazione
+\end{itemize}
+
+Esempio di scenario: simulazione di una smart city con 10.000 dispositivi per validare algoritmi di routing prima del deployment fisico \cite{NS3Simulator}.
+
+\subsubsection{MATLAB/Simulink per analisi predittiva}
+
+Per analisi avanzate:
+\begin{itemize}
+    \item Modellazione stocastica del traffico di rete
+    \item Ottimizzazione del posizionamento dei router
+    \item Predizione della durata batterie con profili d'uso variabili
+    \item Analisi Monte Carlo per affidabilità del sistema
+\end{itemize}
+
+\section{Best practice per l'ottimizzazione delle prestazioni}
+
+\subsection{Progettazione della topologia di rete}
+
+Una topologia ben progettata è fondamentale per prestazioni ottimali:
+
+\begin{enumerate}
+    \item \textbf{Posizionamento strategico dei router}: Garantire almeno 2 percorsi ridondanti per dispositivi critici
+    \item \textbf{Bilanciamento del carico}: Distribuire dispositivi end-device equamente tra router
+    \item \textbf{Minimizzazione degli hop}: Posizionare coordinator/hub centralmente
+    \item \textbf{Considerazione delle interferenze}: Mappare Wi-Fi e altri dispositivi 2.4 GHz
+\end{enumerate}
+
+\subsection{Ottimizzazione del consumo energetico}
+
+Strategie pratiche per massimizzare la durata delle batterie:
+
+\begin{itemize}
+    \item \textbf{Polling adattivo}: Aumentare intervalli di reporting per dispositivi stabili
+    \item \textbf{Aggregazione dei dati}: Inviare multiple letture in un singolo pacchetto
+    \item \textbf{Wake-on-radio}: Utilizzare radio secondarie a bassissimo consumo per il risveglio
+    \item \textbf{Predizione e caching}: Anticipare richieste ricorrenti per ridurre comunicazioni
+\end{itemize}
+
+\subsection{Gestione delle interferenze}
+
+In ambienti 2.4 GHz congestionati:
+
+\begin{enumerate}
+    \item \textbf{Channel hopping}: Utilizzare tutti i canali disponibili (Zigbee: 11, 15, 20, 25)
+    \item \textbf{Frequency agility}: Implementare cambio dinamico di canale
+    \item \textbf{Time slotting}: Coordinare trasmissioni per evitare collisioni
+    \item \textbf{Power control}: Ridurre potenza TX al minimo necessario
+\end{enumerate}
+
+\section{Conclusioni}
+
+L'analisi delle prestazioni e dell'affidabilità dei protocolli IoT rivela un panorama complesso dove non esiste una soluzione universalmente superiore. La scelta del protocollo più adatto dipende strettamente dai requisiti specifici dell'applicazione:
+
+\begin{itemize}
+    \item Per dispositivi a batteria con requisiti di banda modesti, Z-Wave e Zigbee rimangono scelte eccellenti
+    \item Thread emerge come evoluzione naturale per chi cerca modernità e interoperabilità IP-native
+    \item Wi-Fi domina dove la banda è prioritaria e l'alimentazione non è un vincolo
+    \item Matter promette di semplificare l'ecosistema garantendo interoperabilità senza compromettere le prestazioni
+\end{itemize}
+
+Il futuro vedrà probabilmente una coesistenza di questi protocolli, ciascuno ottimizzato per specifici use case, unificati a livello applicativo da standard come Matter. La chiave del successo sta nel comprendere profondamente requisiti e vincoli, utilizzando gli strumenti e le metodologie descritte per validare le scelte progettuali prima del deployment su larga scala.
